crates/sdk-tests/tests/funding/fundable_hook_used_twice_fails.stderr
error: Each function can be annotated with `#[fundable_hook]` exactly once.
 --> $DIR/fundable_hook_used_twice_fails.rs:3:1
  |
3 | #[template]
  | ^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `template` (in Nightly builds, run with -Z macro-backtrace for more info)
